# port-daddy

./: .gitignore  ARCHITECTURE_REVIEW.md  ARCHITECTURE_V2.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  MARKETING.md  PRODUCTION_STATUS.md  README.md  XSS_FIXES_SUMMARY.md  capture_preview.py  com.erichowens.port-daddy.plist  config.json  extract_prompts.py  features.manifest.json  features.manifest.json.tmp  install-daemon.js  install-daemon.ts  jest.config.js  package-lock.json  package.json  parse2.js  parse_logo.js  parse_svg.js  port-daddy-asciinema-skills-plan.md  port-daddy-distribution-analysis.md  port-daddy-distribution-strategy.md  port-daddy-v3.5-execution-plan.md  port-daddy-website-refresh-plan.md  port-daddy.rb  refactor_tutorials.js  replace_tags.js  server.js  server.ts  tsconfig.json  verify-xss-fixes.sh
.claude-plugin/: marketplace.json  plugin.json
.gemini/: settings.json
.serena/: project.yml
Formula/: port-daddy.rb
analyses/: harbor_card_v1.pv  harbor_card_v1_refined.pv  harbor_card_v2_asymmetric.pv  harbor_card_v3_delegation.pv  product-appeal.md  ux-friction-cli-readme.md  ux-friction-sdk-api.md
cli/: types.ts
completions/: port-daddy.bash  port-daddy.fish  port-daddy.zsh
core/harbor-card-rs/: Cargo.toml
core/harbor-card-rs/src/: lib.rs
dashboard/: tui.tsx
demos/: coordination-dual.tape  coordination.tape  demo.tape  port-conflict-dual.tape  port-conflict.tape
docs/: DESIGN_SPEC_V2.md  HARVEST_MANIFEST.md  ROADMAP.md  SECURITY_SOUNDNESS.md  sdk.md
examples/: agent-coordination.js
lib/: activity.js  db.ts  (+49 more)
(+314 files in other folders)
