[package]
name = "harbor-card-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ed25519-dalek = "2.1"
base64 = "0.22"
chrono = "0.4"
thiserror = "1.0"

[dev-dependencies]
proptest = "1.4"
